[package]
name = "google-cloudevents"
description = "Prost/Serde structs for Google CloudEvent types with axum integration"
license = "MIT"
version = "0.1.9"
edition = "2021"
repository = "https://github.com/fourlexboehm/google-cloudevents-rs"

[dependencies]
pbjson-types = "0.7.0"
prost = "0.13.4"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.15"

axum = { version = ">0.7", optional = true }
async-trait = { version = "^0.1", optional = true }
cloudevents-sdk = { version = "0.8.0", optional = true }
serde_json = { version = "1", optional = true }
log = { version = "^0.4.22", optional = true }


[features]
axum = [
    "dep:axum",
    "async-trait",
    "cloudevents-sdk",
    "serde_json",
    "log"
]